added components, the logic of redux and some functionality

--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "homework-template",
+  "name": "task-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Ros1989.github.io/homework-template",
+  "homepage": "https://Ros1989.github.io/task-test",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.24.0",
     "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^8.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
